--- a/src/application.properties
+++ b/src/application.properties
@@ -1,9 +1,9 @@
 # Database Credentials
 db.driverName = com.mysql.cj.jdbc.Driver
-db.connectionString = jdbc:mysql://localhost:3306/shopping-cart
-db.username = root
-db.password = root
+db.connectionString = jdbc:mysql://ec2-43-205-170-3.ap-south-1.compute.amazonaws.com:3306/shopping-cart
+db.username = ashitosh
+db.password = Ashu@6322
 
 #Mailer Credentials
-mailer.email=your_email
-mailer.password=your_app_password_generated_from_email
+mailer.email=awswithashitosh@gmail.com
+mailer.password=btli exai nare tory
